--- a/libray/build.gradle
+++ b/libray/build.gradle
@@ -21,8 +21,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation deps.appcompat
-    implementation deps.constraintlayout
+    implementation deps.recyclerview
 
     testImplementation deps.junit
 
