--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -21,6 +21,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':library')
+//    implementation "com.samelody.modapter:modapter:0.1.0"
     implementation deps.appcompat
     implementation deps.recyclerview
     implementation deps.constraintlayout
