--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.samelody.samples.modapter"
         minSdkVersion deps.minSdk
         targetSdkVersion deps.targetSdk
-        versionCode deps.demoVersionCode
-        versionName deps.demoVersionName
+        versionCode 2
+        versionName "0.2.0-alpha1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -20,7 +20,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(':library')
+    implementation project(':core')
+    implementation project(':paging')
 //    implementation "com.samelody.modapter:modapter:0.1.0"
     implementation deps.appcompat
     implementation deps.recyclerview
