--- a/paging/build.gradle
+++ b/paging/build.gradle
@@ -8,7 +8,7 @@ pubspec.artifactId = 'modapter-paging'
 pubspec.repo = 'maven'
 pubspec.name = 'Modapter'
 pubspec.description = 'Modular adapter for Android RecyclerView.'
-pubspec.version = "0.2.0-alpha1"
+pubspec.version = "0.2.0"
 pubspec.versionCode = 2
 pubspec.url = 'https://github.com/samelody/modapter'
 pubspec.gitUrl = 'https://github.com/samelody/modapter.git'
