--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -7,7 +7,7 @@ android {
         minSdkVersion deps.minSdk
         targetSdkVersion deps.targetSdk
         versionCode 2
-        versionName "0.2.0-alpha1"
+        versionName "0.2.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -22,7 +22,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':core')
     implementation project(':paging')
-//    implementation "com.samelody.modapter:modapter:0.1.0"
+//    implementation "com.samelody.modapter:modapter-core:0.2.0"
+//    implementation "com.samelody.modapter:modapter-paging:0.2.0"
     implementation deps.appcompat
     implementation deps.recyclerview
     implementation deps.constraintlayout
